--- a/teaching/calc2/series/index.html
+++ b/teaching/calc2/series/index.html
@@ -189,14 +189,16 @@ title: Series
         Can you see what should that value be?
     </p>
 </section>
-<section>
+<section data-audio-src="8-1.mp3">
     <h3>Convergence property</h3>
 
-    To distinguish the kind of series that actually make sense 
-    and add up to finite value from the rest,
-    we use the concept of "partial sums".
+    <p>
+        To distinguish the kind of series that actually make sense 
+        and add up to finite value from the rest,
+        we use the concept of "partial sums".
+    </p>
 
-    <div class="theorem fragment">
+    <div class="theorem fragment" data-audio-src="8-2.mp3">
         <p>
             For a series $\sum_{k=1}^\infty a_k$,
             we define its <b>$n$-th partial sum</b> to be
@@ -213,14 +215,14 @@ title: Series
         </p>
     </div>
 
-    <p class="fragment">
+    <p class="fragment" data-audio-src="8-3.mp3">
         The "partial sum" is essentially a running total 
         as we go through the terms in a series one by one.
         The series converge if this running total converge.
     </p>
 
 </section>
-<section>
+<section data-audio-src="9-1.mp3">
     <h3>Case study: Geometric series</h3>
 
     <div class="theorem"><p>
@@ -233,13 +235,13 @@ title: Series
         $a \ne 0$ and $|r| \ne 0, 1$.
     </p></div>
 
-    <p class="fragment">
+    <p class="fragment" data-audio-src="9-2.mp3">
         This series show up in many area of mathematics.
         One early appearance is in
         Archimedes' solution to the problem of area bounded by a parabola.
     </p>
 
-    <div class="fragment">
+    <div class="fragment" data-audio-src="9-3.mp3">
         <p>
             <b>Problem.</b>
         </p>
@@ -249,7 +251,7 @@ title: Series
         </ol>
     </div>
 </section>
-<section>
+<section data-audio-src="10-1.mp3">
     <p><b>Solution.</b>
         We will start with $n$-th partial sum $S_n$ and $r$ times $S_n$
         \begin{align*}
@@ -257,7 +259,7 @@ title: Series
             rS_n &= \hspace{3.6ex} ar + ar^2 + ar^2 + \cdots + ar^{n-1} + ar^n.
         \end{align*}
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="10-2.mp3">
         The two have many common terms, so
         <!-- So in the difference $S_n - rS_n$, most of the terms will cancel: -->
         \[
@@ -266,7 +268,7 @@ title: Series
             (1 - r)S_n = a(1 - r^n).
         \]
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="10-3.mp3">
         Since we assumed $r \ne 1$.
         Therefore,
         \begin{align*}
@@ -280,7 +282,7 @@ title: Series
         <em>if and only if</em> $|r| < 1$.
         Otherwise the limit does not exist.
     </p>
-    <div class="theorem fragment"><p>
+    <div class="theorem fragment" data-audio-src="10-4.mp3"><p>
         The geometric series
         $a + ar + ar^2 + ar^3 + \cdots$
         converges to $\frac{a}{1-r}$
@@ -288,7 +290,7 @@ title: Series
         Otherwise, this series diverges.
     </p></div>
 </section>
-<section>
+<section data-audio-src="11-1.mp3">
     <h3>Case study: Telescoping series</h3>
 
     <p><b>Problem.</b>
@@ -297,11 +299,13 @@ title: Series
         Determine its convergence property
         and evaluate this series if it converges.
     </p>
-    <p><b>Solution.</b>
+    <p class="fragment" data-audio-src="11-2.mp3">
+        <b>Solution.</b>
         A useful observation is that,
         via <em>partial fraction decomposition</em>,
         we can see $\frac{1}{k(k+1)} = \frac{1}{k} - \frac{1}{k+1}$.
-        With this, the partial sum becomes
+    </p>
+    <p class="fragment" data-audio-src="11-3.mp3">
         \begin{align*}
             &\sum_{k=1}^{n} \left( \frac{1}{k} - \frac{1}{k+1} \right) \\
             &= \left[ \left( \frac{1}{1} - \frac{1}{2} \right) + \left( \frac{1}{2} - \frac{1}{3} \right) + \left( \frac{1}{3} - \frac{1}{4} \right) + \cdots+ \left( \frac{1}{n} - \frac{1}{n+1} \right) \right]\\
@@ -310,14 +314,12 @@ title: Series
         \end{align*}
     </p>
 </section>
-<section>
+<section data-audio-src="12-1.mp3">
     <p>
         We have computed that the partial sum is
         \[
             S_n = 1 - \frac{1}{n+1}
         \]
-    </p>
-    <p class="fragment">
         So
         \[
             \lim_{n \to \infty} S_n = \lim_{n \to \infty} \left[ \frac{1}{1} - \frac{1}{n+1} \right]
@@ -325,16 +327,16 @@ title: Series
             = 1
         \]
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="12-2.mp3">
         Therefore, we can conclude that the series 
         $\sum_{k=1}^\infty \frac{1}{k(k+1)}$ converges to 1.
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="12-3.mp3">
         Such a series is called a <b>telescoping series</b> because
         its partial sum collapse due to cancellation of 
         consecutive terms leaving only a few terms.
     </p>
-    <div class="fragment">
+    <div class="fragment" data-audio-src="12-4.mp3">
         <p>In general, the idea is to</p>
         <ol>
             <li>Decompose each term in to several terms;</li>
@@ -343,7 +345,7 @@ title: Series
         </ol>
     </div>
 </section>
-<section>
+<section data-audio-src="13-1.mp3">
     <h3>Case study: Grandi's</h3>
     <p>
         We come back to the series
@@ -352,9 +354,9 @@ title: Series
         \]
         Is it convergent? Is it meaningful to talk about its value?
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="13-2.mp3">
         \[
-            S_n = \sum_{k=0}^n (-1)^k =
+            S_n = \sum_{k=0}^{n-1} (-1)^k =
             \begin{cases}
                 0 & \text{if $n$ is even} \\
                 1 & \text{if $n$ is odd}
@@ -364,12 +366,12 @@ title: Series
             \text{ does not exist}.
         \]
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="13-3.mp3">
         Therefore the series $\sum_{k=0}^\infty (-1)^k$
         is <em>divergent</em>.
     </p>
 </section>
-<section>
+<section data-audio-src="14-1.mp3">
     <h3>Case study: Harmonic series</h3>
 
     <div class="theorem"><p>
@@ -378,8 +380,8 @@ title: Series
             \sum_{k=1}^\infty \frac{1}{k} = 1 + \frac{1}{2} + \frac{1}{3} + \frac{1}{4} + \frac{1}{5} + \cdots.
         \]
     </p></div>
-    <p class="fragment">
-        <b>Exercise</b>
+    <p class="fragment" data-audio-src="14-2.mp3">
+        <b>Exercise.</b>
         Use the fact that
         \begin{align*}
                &1+\frac{1}{2}+\frac{1}{3}            + \frac{1}{4} + \frac{1}{5}            + \frac{1}{6}            +\frac{1}{7}            +\frac{1}{8} +   \cdots \\
@@ -387,12 +389,12 @@ title: Series
         \end{align*}
         to show the harmonic series diverges.
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="14-3.mp3">
         It is useful benchmark case
         to which other series can be compared.
     </p>
 </section>
-<section>
+<section data-audio-src="15.mp3">
     <h3>Summary</h3>
     <ul>
         <li>Series: they look like infinite sums (but it's more complicated than that);</li>
