--- a/teaching/calc2/geometric-series/index.html
+++ b/teaching/calc2/geometric-series/index.html
@@ -5,9 +5,12 @@ title: More on geometric series
 
 <section class="titlepage">
     <h2 class="title">More on geometric series</h2>
-    <!-- <p class="footnote2">
-        Infinite sum done right
-    </p> -->
+    <p class="footnote2">
+        Last time we studied "geometric series" of a special form.
+        In general, a geometric series is a series
+        where the ratio between consecutive terms is a fixed constant.
+        In this lecture we will study such more general cases.
+    </p>
     <p>Tianran Chen</p>
     <p class="footnote2">
         Department of Mathematics<br>
@@ -15,7 +18,7 @@ title: More on geometric series
     </p>
 </section>
 <!-- <section data-audio-src="1-1.mp3"> </section> -->
-<section>
+<section data-audio-src="1-1.mp3">
     <h3>Review: geometric series</h3>
 
     <p>
@@ -26,7 +29,7 @@ title: More on geometric series
         if $|r| < 1$.
         Otherwise, it diverges.
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="1-2.mp3">
         For example,
         \[
             1 + \frac{1}{2} + \frac{1}{4} + \frac{1}{8} + \frac{1}{16} + \cdots = 
@@ -37,7 +40,7 @@ title: More on geometric series
         \]
     </p>
 </section>
-<section>
+<section data-audio-src="2-1.mp3">
     <h3>What if we don't start at $k=0$?</h3>
 
     <p>
@@ -48,7 +51,7 @@ title: More on geometric series
             
         \]
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="2-2.mp3">
         We can simply factor out $\frac{1}{2}$ from each term and get
         \[
             \frac{1}{2} \cdot 1 + \frac{1}{2} \frac{1}{2} + \frac{1}{2} \frac{1}{4} + \frac{1}{2} \frac{1}{8} + \cdots
@@ -58,35 +61,35 @@ title: More on geometric series
         \]
     </p>
 </section>
-<section>
+<section data-audio-src="3-1.mp3">
     <h3>The general case</h3>
     <div class="theorem">
         <p>
-            For any real number $a \ne 0$ and integer $k_0$, the series
+            For real numbers $a,r$ with $a \ne 0$, $|r| \ne 0,1$, and integer $k_0$, the series
             \[ ar^{k_0} + ar^{k_0+1} + ar^{k_0+2} + ar^{k_0+3} + \cdots \]
             converges to \[ \frac{a \, r^{k_0} }{ 1-r } \]
             if $|r| < 1$.
             Otherwise, this series diverges.
         </p>
     </div>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="3-2.mp3">
         For example,
         \[
-            \sum_{k=3} 4 \left( \frac{2}{3} \right)^k
+            \sum_{k=3}^\infty 4 \left( \frac{2}{3} \right)^k
             = \frac{ 4 \cdot \left( \frac{2}{3} \right)^3 }{ 1 - \frac{2}{3} }
             = \frac{ 4 \cdot \left( \frac{8}{27} \right) }{ \frac{1}{3} }
             = \frac{32}{9}
         \]
     </p>
 </section>
-<section>
+<section data-audio-src="4-1.mp3">
     <h3>Something doesn't look like a geometric series</h3>
 
     <p>
         What can we say about the series
         \[ \sum_{k=0}^\infty \frac{ 2^{k+2} }{ 3^{k-1} } ? \]
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="4-2.mp3">
         Even though it does not look a geometric series,
         with some algebraic manipulation, we can turn it into one.
         \[
@@ -101,8 +104,8 @@ title: More on geometric series
     </p>
 
 </section>
-<section>
-    <h3>Repeating decimal</h3>
+<section data-audio-src="5-1.mp3">
+    <h3>Repeating decimals</h3>
 
     <p>
         You have already used geometric series in elementary school: 
@@ -112,7 +115,7 @@ title: More on geometric series
             0.9999\cdots = 0.9 + 0.09 + 0.009 + 0.0009 + \cdots = \sum_{k=1}^\infty 9 (0.1)^{k}
         \]
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="5-2.mp3">
         Using the formula given above, we can compute that
         \[
             0.9999\cdots = \sum_{k=1}^\infty 9 (0.1)^{k}
@@ -124,7 +127,7 @@ title: More on geometric series
         $0.9999\cdot$ is indeed <em>exactly</em> 1 (not just an approximation).
     </p>
 </section>
-<section>
+<section data-audio-src="6-1.mp3">
     <p>
         <b>Problem.</b>
         Which fraction is equivalent to $0.222\cdots$?
@@ -145,7 +148,7 @@ title: More on geometric series
         \]
     </p>
 </section>
-<section>
+<section data-audio-src="7-1.mp3">
     <p><b>Problem.</b>
         Which fraction is equivalent to $0.123123123\cdots$?
     </p>
