Adding one last sentence for the geometric series

--- a/teaching/calc2/geometric-series/index.html
+++ b/teaching/calc2/geometric-series/index.html
@@ -167,4 +167,10 @@ title: More on geometric series
             = \frac{123}{999}.
         \]
     </p>
+    <p class="fragment">
+        Here, we can also see geometric series,
+        or infinite series, in general, are quite natural and necessary:
+        we have to use them if we want to express some fractions 
+        in decimal notation.
+    </p>
 </section>
