--- a/teaching/calc2/alternating-series/index.html
+++ b/teaching/calc2/alternating-series/index.html
@@ -12,8 +12,8 @@ title: Alternating series and absolute convergence
         We will focus on the special case of alternating series
         whose convergence properties can be determined easily.
         We will see convergent alternating series converge
-        in a very weak way which leads many strange behaviors.
-        To distinguish this type of convergence and the stronger types of convergence,
+        in a very weak way which leads strange behaviors.
+        To distinguish this and the stronger types of convergence,
         we introduce the concept of "absolute convergence".
     </p>
     <p>Tianran Chen</p>
@@ -27,10 +27,7 @@ title: Alternating series and absolute convergence
     <h3>Alternating series</h3>
     <p>
         So far, most of the series we studied consists of positive terms.
-        Such series converge or diverge in simple ways:
-        If the terms shrink to 0 sufficiently quickly,
-        the partial sums will have a finite limit and the series converges.
-        Otherwise the series diverge.
+        Such series converge or diverge in fairly simple ways.
         We will consider more complicated situations
         where a series contain positive and negative terms.
         We will focus on the special case of alternating series.
@@ -45,14 +42,25 @@ title: Alternating series and absolute convergence
             \quad\text{or}\quad
             \sum_{k=1}^\infty (-1)^{k+1} c_k
             \quad
-            \text{for <em>positive</em> } c_1,c_2,\ldots.
+            \text{for positive } c_1,c_2,\ldots.
         \]
-        for some <em>positive</em> numbers $c_1,c_2,\ldots$.
     </p></div>
     <!-- <p>
     Here $(-1)^k$ and $(-1)^{k+1}$ are the standard ways to express
     alternating signs (depending on if you start with $-1$ or $+1$).
     </p> -->
+</section>
+<section>
+    <h3>Examples and nonexamples</h3>
+    <p>
+        \begin{align*}
+            &1 - \frac{1}{2} + \frac{1}{3} - \frac{1}{4} + \frac{1}{5} + \frac{1}{6} + \cdots  &\text{alternating series} \\
+            &1 - \frac{1}{2} + \frac{1}{4} - \frac{1}{8} + \frac{1}{16} + \frac{1}{32} + \cdots &\text{alternating series} \\
+            &1 - 1 + 1 - 1 + 1 - 1 + 1 - \cdots &\text{alternating series} \\
+            &\frac{\cos(\pi)}{1} + \frac{\cos(2\pi)}{2} + \frac{\cos(3\pi)}{3} + \cdots &\text{alternating series} \\
+            &1 - \frac{1}{2} - \frac{1}{3} + \frac{1}{4} - \frac{1}{5} - \frac{1}{6} + \cdots  &\text{NOT alternating series}
+        \end{align*}
+    </p>
 </section>
 <section>
     <div class="theorem"><p>
@@ -63,17 +71,24 @@ title: Alternating series and absolute convergence
             \quad\text{or}\quad
             \sum_{k=1}^\infty (-1)^{k+1} c_k
             \quad
-            \text{for <em>positive</em> } c_1,c_2,\ldots
+            \text{for positive } c_1,c_2,\ldots
         \]
-        converges if $c_k \ge c_{k+1}$
-        and $\lim_{k \to c_k} c_k = 0$.
+        converges if both of the following conditions hold:
+        <ul>
+            <li>
+                $c_k \ge c_{k+1}$ (the magnitude of terms are non-increasing)
+            </li>
+            <li>
+                $\lim_{k \to \infty} c_k = 0$
+            </li>
+        </ul>
     </p></div>
     <!-- <p>
     \noindent
     It is important to remember this test is only valid for alternating series
     and is not to be confused with the ``divergence test''.
     </p> -->
-    <p>
+    <p class="fragment">
         By this test, we can confirm the <b>alternating harmonic series</b>
         \[
             \sum_{k=1}^\infty \frac{(-1)^{k+1}}{k}
@@ -82,22 +97,73 @@ title: Alternating series and absolute convergence
         is convergent
         (even though the harmonic series diverges).
     </p>
-    <p>
+    <!-- <p>
         Its convergence depends on the intricate cancellation between 
         positive and negative terms
         We will see the detail in later discussions.
         Indeed, it converges to $\ln 2$ (we will see why).
+    </p> -->
+</section>
+<section>
+    <h3>Example 1</h3>
+    <p>
+        The series 
+        \[ 
+            \sum_{k=1}^\infty \frac{(-1)^k}{\sqrt{k}} 
+            = -1 
+            + \frac{1}{\sqrt{2}} 
+            - \frac{1}{\sqrt{3}} 
+            + \frac{1}{\sqrt{4}} 
+            - \frac{1}{\sqrt{5}} 
+            + \cdots
+        \]
+        also satisfies the two conditions
+    </p>
+    <ul>
+        <li>
+            $\frac{1}{\sqrt{k}} > \frac{1}{\sqrt{k + 1}}$ (the magnitude of terms are non-increasing)
+        </li>
+        <li>
+            $\lim_{k \to \infty} \frac{1}{\sqrt{k}} = 0$
+        </li>
+    </ul>
+    <p>
+        Therefore, we can conclude that this series converges.
+    </p>
+
+</section>
+<section>
+    <h3>Nonexamples</h3>
+    <p>
+        It is crucial to understand when <b>not</b> to use
+        alternating series test.
+        For the following alternating series,
+        the conditions of the tests are not satisfies:
+    </p>
+    <p>
+        \[
+            \sum_{k=1}^\infty (-1)^{k+1} = 1 - 1 + 1 - 1 + 1 - 1 + 1 - \cdots 
+        \]
+    </p>
+    <p class="fragment">
+        \[
+            \frac{1}{\sqrt{2}-1} - 
+            \frac{1}{\sqrt{2}-1} + 
+            \frac{1}{\sqrt{3}-1} - 
+            \frac{1}{\sqrt{3}-1} + 
+            \frac{1}{\sqrt{4}-1} - 
+            \cdots 
+        \]
     </p>
 </section>
 <section>
     <h3>Absolute convergence</h3>
     <p>
-        We can see the convergence of the alternating harmonic series
-        is a very weak form of convergence --- it converges only because
+        The convergence of the <em>alternating harmonic series</em>
+        is a weak form of convergence --- it converges only because
         of the cancellation between positive and negative terms.
-        Convergence of this form can be very strange.
         To further distinguish this and the more robust form of converges,
-        we have the concept of ``absolute convergence''.
+        we have the concept of "absolute convergence".
     </p>
     <div class="theorem"><p>
         We say a series $\sum_{k=1}^\infty a_k$ <b>converges absolutely</b>
@@ -108,10 +174,47 @@ title: Alternating series and absolute convergence
         we say the series <b>converges conditionally</b>
         (or it exhibits <b>conditional convergence</b>).
     </p></div>
+</section>
+<section>
+    <h3>Example: absolute convergence</h3>
     <p>
-        The alternating harmonic series is a classical example of a series
-        that exhibits conditional convergence ---
-        $\sum_{k=1}^\infty (-1)^{k+1} / k$ converges,
-        but $\sum_{k=1}^\infty 1 / k$ diverges.
+        From what we know about geometric series we can see the
+        \[
+            \sum_{k=1}^\infty (-1)^{k+1} \left( \frac{1}{3} \right)^k
+        \]
+        exhibits absolute convergence since
+        \[
+            \sum_{k=1}^\infty \left| (-1)^{k+1} \left( \frac{1}{3} \right)^k \right|
+            = \sum_{k=1}^\infty \left( \frac{1}{3} \right)^k
+        \]
+        converges.
+    </p>
+</section>
+<section>
+    <h3>Absolute convergence implies convergence</h3>
+    <p>
+        It is important to understand that absolute convergence is a
+        stronger condition than convergence,
+        even though this is not clear from the definition.
+    </p>
+    <div class="theorem">
+        <p><b>Theorem.</b>
+            If a series converges absolutely,
+            then it converges.
+        </p>
+    </div>
+</section>
+<section>
+    <h3>Example: conditional convergence</h3>
+    <p>
+        The alternating harmonic series is an example of 
+        conditionally convergent series:
+        \[
+            \sum_{k=1}^\infty \frac{(-1)^{k+1}}{k} \quad\text{converges,}
+        \]
+        but 
+        \[
+            \sum_{k=1}^\infty \frac{1}{k} \quad\text{diverges.}
+        \]
     </p>
 </section>
