--- a/teaching/calc2/comparison-tests/index.html
+++ b/teaching/calc2/comparison-tests/index.html
@@ -20,6 +20,28 @@ title: Comparison tests
 </section>
 <!-- <section data-audio-src="1-1.mp3"> </section> -->
 <section>
+    <h3>Why we need comparison tests?</h3>
+    <p>
+        We learned quite a few tests that can tell us if a series converge or diverge
+        indirectly without computing partial sum,
+        e.g. integral tests.
+    </p>
+    <p class="fragment">
+        But for many series, this can be difficult. E.g.,
+        \[
+            \sum_{k=1}^\infty \frac{1}{k^2 + 1}
+        \]
+    </p>
+    <p class="fragment">
+        We already know the series
+        \[
+            \sum_{k=1}^\infty \frac{1}{k^2}
+        \]
+        is convergent.
+        What can this tell us about the series above?
+    </p>
+</section>
+<section>
     <h3>Direct comparison test</h3>
     <p>
         This test work by comparing two series term by term directly.
@@ -40,6 +62,7 @@ title: Comparison tests
     </p>
 </section>
 <section>
+    <h3>Example 1</h3>
     <p>
         Since
         \[
@@ -64,6 +87,23 @@ title: Comparison tests
         and $\sum_{k=1}^\infty d_k$ diverges, 
         then $\sum_{k=1}^\infty a_k$ also diverges.
     </p></div>
+    <div class="fragment">
+        <p>
+            For example, since
+        </p>
+        <ul>
+            <li>
+                $\frac{1}{k - \frac{1}{3}} \,>\, \frac{1}{k}$, and
+            </li>
+            <li>
+                $\sum_{k=1}^\infty \frac{1}{k}$ (the harmonic series) is divergent.
+            </li>
+        </ul>
+        <p>
+            We can conclude $\sum_{k=1}^\infty \frac{1}{k - \frac{1}{3}}$ is also divergent.
+        </p>
+    </div>
+
     <!-- <p>
         Again, we can always remove any finite list of terms from a series
         without changing its convergence property.
@@ -73,7 +113,22 @@ title: Comparison tests
     </p> -->
 </section>
 <section>
-    <h3>Examples</h3>
+    <h3>Exercises</h3>
+    <p>
+        Use the direct comparison tests 
+        to determine the convergence properties of the following series:
+    </p>
+    <ol>
+        <li>
+            $\sum_{k=1}^\infty \frac{1}{k^2 + k + 1}$
+        </li>
+        <li>
+            $\sum_{k=2}^\infty \frac{1}{k - 1}$
+        </li>
+        <li>
+            $\sum_{k=2}^\infty \frac{\cos(k)}{k^2}$
+        </li>
+    </ol>
 
 </section>
 <section>
@@ -82,7 +137,17 @@ title: Comparison tests
         The direct comparison test stated above is quite easy to use 
         <em>if</em> we can find reference series that satisfy the hypothesis,
         which is not always easy.
-        The ``limit comparison test'' replaces such direct comparisons
+        For example, we wouldn't be able to compare
+        \[
+            \sum_{k=1}^\infty \frac{1}{k + 1}
+            \quad\text{to}\quad
+            \sum_{k=1}^\infty \frac{1}{k}
+            \;\text(harmonic series)
+        \]
+        using direct comparison test, because $\frac{1}{k+1} < \frac{1}{k}$.
+    </p>
+    <p class="fragment">
+        The limit comparison test replaces such direct comparisons
         with comparisons using limits, which can be much more forgiving.
     </p>
 </section>
@@ -101,14 +166,38 @@ title: Comparison tests
             <li>
                 If $\lim_{k \to \infty} \frac{a_k}{b_k} = 0$
                 and $\sum_{k=1}^\infty b_k$ converges,
-                then $\sum_{k=1}^\infty a_k$ also converges.
+                then $\sum_{k=1}^\infty a_k$ converges.
             </li>
             <li>
                 If $\lim_{k \to \infty} \frac{a_k}{b_k} = \infty$
-                (i.e., $\frac{a_k}{b_k}$ grows unboundedly)
+                <!-- (i.e., $\frac{a_k}{b_k}$ grows unboundedly) -->
                 and $\sum_{k=1}^\infty b_k$ diverges,
                 then $\sum_{k=1}^\infty a_k$ also diverges.
             </li>
         </ul>
     </div>
+    <p class="fragment">
+        For example, applying this to 
+        $\sum_{k=1}^\infty \frac{1}{k}$ and 
+        $\sum_{k=1}^\infty \frac{1}{k + 1}$, since
+        \[
+            \lim_{k \to \infty} \frac{ \frac{1}{k} }{ \frac{1}{k+1} } =
+            \lim_{k \to \infty} \frac{ k + 1 }{ k } =
+            \lim_{k \to \infty} 1 + \frac{ 1 }{ k } = 1,
+        \]
+        the two series either both converge or both diverge.
+        But we already the harmonic series $\sum_{k=1}^\infty \frac{1}{k}$ diverges,
+        thus the series $\sum_{k=1}^\infty \frac{1}{k + 1}$ also diverges.
+    </p>
+</section>
+<section>
+    <h3>Exercises</h3>
+    <p>
+        Using the limit comparison test to determine the convergence properties of the following series.
+        \begin{align*}
+            &\sum_{k=1}^\infty \frac{2}{3k + 5} \\
+            &\sum_{k=1}^\infty \frac{3k^2 - 4k + 2}{2k^5 + 4k^3 + 1} \\
+            &\sum_{k=1}^\infty \frac{\sqrt{k}}{3k + 2}
+        \end{align*}
+    </p>
 </section>
