--- a/teaching/calc2/comparison-tests/index.html
+++ b/teaching/calc2/comparison-tests/index.html
@@ -19,20 +19,20 @@ title: Comparison tests
     </p>
 </section>
 <!-- <section data-audio-src="1-1.mp3"> </section> -->
-<section>
+<section data-audio-src="1-1.mp3">
     <h3>Why we need comparison tests?</h3>
     <p>
-        We learned quite a few tests that can tell us if a series converge or diverge
-        indirectly without computing partial sum,
+        We learned quite a few tests that can tell us if a series is 
+        convergent or divergent indirectly without computing partial sum,
         e.g. integral tests.
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="1-2.mp3">
         But for many series, this can be difficult. E.g.,
         \[
             \sum_{k=1}^\infty \frac{1}{k^2 + 1}
         \]
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="1-3.mp3">
         We already know the series
         \[
             \sum_{k=1}^\infty \frac{1}{k^2}
@@ -41,19 +41,19 @@ title: Comparison tests
         What can this tell us about the series above?
     </p>
 </section>
-<section>
+<section data-audio-src="2-1.mp3">
     <h3>Direct comparison test</h3>
     <p>
         This test work by comparing two series term by term directly.
-        For this to work nice we have to restrict ourselves to
+        For this to work nicely we have to restrict ourselves to
         series of <em>nonnegative terms</em>.
     </p>
-    <div class="theorem"><p>
+    <div class="theorem fragment" data-audio-src="2-2.mp3"><p>
         If $0 \le a_k \le c_k$ for all positive integer $k$,
         and $\sum_{k=1}^\infty c_k$ converges, 
         then $\sum_{k=1}^\infty a_k$ also converges.
     </p></div>
-    <p>
+    <p class="fragment" data-audio-src="2-3.mp3">
         Since the terms are nonnegative, 
         terms must shrink to 0 quickly enough for the series to converge;
         If each term is bounded by the corresponding term in a series
@@ -61,7 +61,7 @@ title: Comparison tests
         then we can conclude the original series also converge.
     </p>
 </section>
-<section>
+<section data-audio-src="3-1.mp3">
     <h3>Example 1</h3>
     <p>
         Since
@@ -78,7 +78,7 @@ title: Comparison tests
         \]
     </p>
 </section>
-<section>
+<section data-audio-src="4-1.mp3">
     <p>
         Similarly, we can determine if a series is divergent by comparing it to a divergent series.
     </p>
@@ -87,7 +87,7 @@ title: Comparison tests
         and $\sum_{k=1}^\infty d_k$ diverges, 
         then $\sum_{k=1}^\infty a_k$ also diverges.
     </p></div>
-    <div class="fragment">
+    <div class="fragment" data-audio-src="4-2.mp3">
         <p>
             For example, since
         </p>
@@ -112,7 +112,7 @@ title: Comparison tests
         ``for all $k \ge N$'' for some fixed positive integer $N$.
     </p> -->
 </section>
-<section>
+<section data-audio-src="5-1.mp3">
     <h3>Exercises</h3>
     <p>
         Use the direct comparison tests 
@@ -131,7 +131,7 @@ title: Comparison tests
     </ol>
 
 </section>
-<section>
+<section data-audio-src="6-1.mp3">
     <h3>Limit comparison test</h3>
     <p>
         The direct comparison test stated above is quite easy to use 
@@ -142,33 +142,34 @@ title: Comparison tests
             \sum_{k=1}^\infty \frac{1}{k + 1}
             \quad\text{to}\quad
             \sum_{k=1}^\infty \frac{1}{k}
-            \;\text(harmonic series)
+            \;\text{(harmonic series)}
         \]
         using direct comparison test, because $\frac{1}{k+1} < \frac{1}{k}$.
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="6-2.mp3">
         The limit comparison test replaces such direct comparisons
         with comparisons using limits, which can be much more forgiving.
     </p>
 </section>
-<section>
+<section data-audio-src="7-1.mp3">
     <div class="theorem">
         <p>
+            <b>Limit comparison.</b>
             Let $\sum_{k=1}^\infty a_k$ and $\sum_{k=1}^\infty b_k$ be two series
             with $a_k, b_k \ge 0$.
         </p>
         <ul>
-            <li>
+            <li class="fragment" data-audio-src="7-2.mp3">
                 If $\lim_{k \to \infty} \frac{a_k}{b_k}$ is <em>finite</em> and <em>nonzero</em>,
                 then $\sum_{k=1}^\infty a_k$ and $\sum_{k=1}^\infty b_k$
                 either <em>both converge or both diverge</em>.
             </li>
-            <li>
+            <li class="fragment" data-audio-src="7-3.mp3">
                 If $\lim_{k \to \infty} \frac{a_k}{b_k} = 0$
                 and $\sum_{k=1}^\infty b_k$ converges,
                 then $\sum_{k=1}^\infty a_k$ converges.
             </li>
-            <li>
+            <li class="fragment" data-audio-src="7-4.mp3">
                 If $\lim_{k \to \infty} \frac{a_k}{b_k} = \infty$
                 <!-- (i.e., $\frac{a_k}{b_k}$ grows unboundedly) -->
                 and $\sum_{k=1}^\infty b_k$ diverges,
@@ -176,7 +177,7 @@ title: Comparison tests
             </li>
         </ul>
     </div>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="7-5.mp3">
         For example, applying this to 
         $\sum_{k=1}^\infty \frac{1}{k}$ and 
         $\sum_{k=1}^\infty \frac{1}{k + 1}$, since
@@ -190,7 +191,7 @@ title: Comparison tests
         thus the series $\sum_{k=1}^\infty \frac{1}{k + 1}$ also diverges.
     </p>
 </section>
-<section>
+<section data-audio-src="8-1.mp3">
     <h3>Exercises</h3>
     <p>
         Using the limit comparison test to determine the convergence properties of the following series.
