FIxed minor types in comparison test slideshow

--- a/teaching/calc2/comparison-tests/index.html
+++ b/teaching/calc2/comparison-tests/index.html
@@ -154,13 +154,14 @@ title: Comparison tests
 <section data-audio-src="7-1.mp3">
     <div class="theorem">
         <p>
-            <b>Limit comparison.</b>
+            <b>Limit comparison test.</b>
             Let $\sum_{k=1}^\infty a_k$ and $\sum_{k=1}^\infty b_k$ be two series
             with $a_k, b_k \ge 0$.
         </p>
         <ul>
             <li class="fragment" data-audio-src="7-2.mp3">
-                If $\lim_{k \to \infty} \frac{a_k}{b_k}$ is <em>finite</em> and <em>nonzero</em>,
+                If $\lim_{k \to \infty} \frac{a_k}{b_k}$ <em>exists</em> 
+                and is <em>finite</em> and <em>nonzero</em>,
                 then $\sum_{k=1}^\infty a_k$ and $\sum_{k=1}^\infty b_k$
                 either <em>both converge or both diverge</em>.
             </li>
