--- a/teaching/calc2/alternating-series/index.html
+++ b/teaching/calc2/alternating-series/index.html
@@ -8,7 +8,7 @@ title: Alternating series and absolute convergence
     <p class="footnote2">
         So far, most of the series we studied consists of positive terms.
         In this lecture, we will consider more complicated situations
-        where a series contain positive and negative terms.
+        where a series contains positive and negative terms.
         We will focus on the special case of alternating series
         whose convergence properties can be determined easily.
         We will see convergent alternating series converge
@@ -23,16 +23,16 @@ title: Alternating series and absolute convergence
     </p>
 </section>
 <!-- <section data-audio-src="1-1.mp3"> </section> -->
-<section>
+<section data-audio-src="1-1.mp3">
     <h3>Alternating series</h3>
     <p>
         So far, most of the series we studied consists of positive terms.
         Such series converge or diverge in fairly simple ways.
         We will consider more complicated situations
-        where a series contain positive and negative terms.
+        where a series contains positive and negative terms.
         We will focus on the special case of alternating series.
     </p>
-    <div class="theorem"><p>
+    <div class="theorem fragment" data-audio-src="1-2.mp3"><p>
         <b>Definition.</b>
         An <b>alternating series</b> is a series
         whose terms have alternating signs.
@@ -45,12 +45,12 @@ title: Alternating series and absolute convergence
             \text{for positive } c_1,c_2,\ldots.
         \]
     </p></div>
-    <!-- <p>
-    Here $(-1)^k$ and $(-1)^{k+1}$ are the standard ways to express
-    alternating signs (depending on if you start with $-1$ or $+1$).
-    </p> -->
+    <p class="fragment" data-audio-src="1-3.mp3">
+        Here $(-1)^k$ and $(-1)^{k+1}$ are the common ways to express
+        alternating signs (depending on if you start with $-1$ or $+1$).
+    </p>
 </section>
-<section>
+<section data-audio-src="2-1.mp3">
     <h3>Examples and nonexamples</h3>
     <p>
         \begin{align*}
@@ -62,7 +62,7 @@ title: Alternating series and absolute convergence
         \end{align*}
     </p>
 </section>
-<section>
+<section data-audio-src="3-1.mp3">
     <div class="theorem"><p>
         <b>Alternating series test.</b>
         An alternating series of the form
@@ -88,7 +88,7 @@ title: Alternating series and absolute convergence
     It is important to remember this test is only valid for alternating series
     and is not to be confused with the ``divergence test''.
     </p> -->
-    <p class="fragment">
+    <p class="fragment" data-audio-src="3-2.mp3">
         By this test, we can confirm the <b>alternating harmonic series</b>
         \[
             \sum_{k=1}^\infty \frac{(-1)^{k+1}}{k}
@@ -104,7 +104,7 @@ title: Alternating series and absolute convergence
         Indeed, it converges to $\ln 2$ (we will see why).
     </p> -->
 </section>
-<section>
+<section data-audio-src="4-1.mp3">
     <h3>Example 1</h3>
     <p>
         The series 
@@ -132,7 +132,7 @@ title: Alternating series and absolute convergence
     </p>
 
 </section>
-<section>
+<section data-audio-src="5-1.mp3">
     <h3>Nonexamples</h3>
     <p>
         It is crucial to understand when <b>not</b> to use
@@ -145,18 +145,32 @@ title: Alternating series and absolute convergence
             \sum_{k=1}^\infty (-1)^{k+1} = 1 - 1 + 1 - 1 + 1 - 1 + 1 - \cdots 
         \]
     </p>
-    <p class="fragment">
+    <p class="fragment" data-audio-src="5-2.mp3">
+        Or the series
         \[
             \frac{1}{\sqrt{2}-1} - 
-            \frac{1}{\sqrt{2}-1} + 
+            \frac{1}{\sqrt{2}+1} + 
             \frac{1}{\sqrt{3}-1} - 
-            \frac{1}{\sqrt{3}-1} + 
+            \frac{1}{\sqrt{3}+1} + 
             \frac{1}{\sqrt{4}-1} - 
             \cdots 
         \]
     </p>
 </section>
-<section>
+<section data-audio-src="6-1.mp3">
+    <h3>Exercises</h3>
+    <p>
+        Use the alternating series test
+        (in combinations with other tests, if necessary),
+        determine which of the following series is convergent.
+    </p>
+    <ol>
+        <li>\[\sum_{k=1}^\infty \frac{(-1)^k}{2k + 5} \]</li>
+        <li>\[ \sum_{k=1}^\infty \frac{(-1)^k k}{2k + 5} \]</li>
+        <li>\[\sum_{k=1}^\infty \frac{(-1)^k}{k^2} \]</li>
+    </ol>
+</section>
+<section data-audio-src="7-1.mp3">
     <h3>Absolute convergence</h3>
     <p>
         The convergence of the <em>alternating harmonic series</em>
@@ -165,7 +179,8 @@ title: Alternating series and absolute convergence
         To further distinguish this and the more robust form of converges,
         we have the concept of "absolute convergence".
     </p>
-    <div class="theorem"><p>
+    <div class="theorem fragment" data-audio-src="7-2.mp3"><p>
+        <b>Definition.</b>
         We say a series $\sum_{k=1}^\infty a_k$ <b>converges absolutely</b>
         (or it exhibits <b>absolute convergence</b>)
         if $\sum_{k=1}^\infty |a_k|$ converges.
@@ -175,12 +190,13 @@ title: Alternating series and absolute convergence
         (or it exhibits <b>conditional convergence</b>).
     </p></div>
 </section>
-<section>
+<section data-audio-src="8-1.mp3">
     <h3>Example: absolute convergence</h3>
     <p>
         From what we know about geometric series we can see the
         \[
             \sum_{k=1}^\infty (-1)^{k+1} \left( \frac{1}{3} \right)^k
+            = \frac{1}{3} - \frac{1}{9} + \frac{1}{27} - \cdots
         \]
         exhibits absolute convergence since
         \[
@@ -190,7 +206,7 @@ title: Alternating series and absolute convergence
         converges.
     </p>
 </section>
-<section>
+<section data-audio-src="9-1.mp3">
     <h3>Absolute convergence implies convergence</h3>
     <p>
         It is important to understand that absolute convergence is a
@@ -203,8 +219,16 @@ title: Alternating series and absolute convergence
             then it converges.
         </p>
     </div>
+    <p class="fragment" data-audio-src="9-2.mp3">
+        Absolute convergence is a stronger condition,
+        and it is quite important in our study of series 
+        as it implies many nice properties:
+        E.g. rearrangements of terms in an absolute convergent series
+        do not change the value of the sum. 
+        (The same cannot be said about conditionally convergent series)
+    </p>
 </section>
-<section>
+<section data-audio-src="10-1.mp3">
     <h3>Example: conditional convergence</h3>
     <p>
         The alternating harmonic series is an example of 
@@ -217,4 +241,15 @@ title: Alternating series and absolute convergence
             \sum_{k=1}^\infty \frac{1}{k} \quad\text{diverges.}
         \]
     </p>
+</section>
+<section data-audio-src="11-1.mp3">
+    <h3>Exercises</h3>
+    <p>
+        Determine which of the following alternating series is/are convergent.
+    </p>
+    <ol>
+        <li>\[\sum_{k=1}^\infty \frac{(-1)^k}{2k + 5} \]</li>
+        <li>\[ \sum_{k=1}^\infty \frac{(-1)^k k}{2k + 5} \]</li>
+        <li>\[\sum_{k=1}^\infty \frac{(-1)^k}{k^2} \]</li>
+    </ol>
 </section>
